--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "fmt": "prettier . --write"
   },
   "dependencies": {
     "@remix-run/node": "^2.6.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "3.2.5",
     "typescript": "^5.1.6"
   },
   "engines": {
